1998-08-17  Andrew Veliath  <andrewtv@usa.net>

	* Update version to 0.3

	* Create an IDLF_COMBINE_REOPENED_MODULES to have libIDL combine
	  all the module declarations into one tree, instead of separate
	  trees with the same ident node.

	* Add __declspec support.  First one implemented is for
	  interfaces, so that __declspec (nostubs) interface foo { ... };
	  won't generate tree node information.  Had to revamp grammar
	  slightly to get a single lookahead.

	* Change IDL_long_t to IDL_longlong_t (+ unsigned version).

1998-08-10  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: Catch the interface Object construct, which isn't
	  legal, but is in some pseudo-IDL files.

	* lexer.l: Bring back Object token recognition.

	* ns.c (IDL_ns_ident_to_qstring): If given and IDLN_IDENT,
	  quietly call IDL_IDENT_TO_NS.

	* util.[ch]: Change g_strcase_hash to IDL_strcase_hash (make
	  public).  Add IDL_strcase_equal, IDL_strcase_cmp,
	  load_forward_dcls, resolve_forward_dcls,
	  print_unresolved_forward_dcls, IDL_tree_resolve_forward_dcls.
	  (IDL_parse_filename): Warn on unresolved forward declarations in
	  post-parse semantic checking.  Remove __IDL_tree_print, add
	  IDL_tree_walk_pre_order.

	* IDL.h: Add IDL_tree_walk_pre_order prototype and callback typedef.

1998-08-09  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: enum_type: Don't generate a nested scope.

1998-08-06  Andrew Veliath  <andrewtv@usa.net>

	* Allow for redefinition of certain items in inheritance
	  (doesn't detect some invalid items, but still better than
	  before).
	
	* Change the namespace data structure from a general tree using a
	  linked list to case-insensitive string hashes for each tree
	  level.  Used g_str_hash from glib modified for
	  case-insensitivity (g_strcase_hash).

	* Fix bug where some top-level redeclarations would cause a core
	  dump.

	* Change references to strdup to g_strdup, and update
	  configure.in.
	