@@ -59,11 +59,12 @@ extern gint			IDL_ident_equal(gconstpointer a, gconstpointer b);
 extern gint			IDL_ident_cmp(gconstpointer a, gconstpointer b);
 extern int			IDL_tree_get_node_info(struct _IDL_tree_node *tree,
 						       char **who, char **what);
+extern void			__IDL_tree_free(struct _IDL_tree_node *p);
 extern int			IDL_ns_check_for_ambiguous_inheritance(struct _IDL_tree_node *interface_ident,
 								       struct _IDL_tree_node *p);
-extern void			IDL_tree_process_forward_dcls(struct _IDL_tree_node **p);
-extern void			IDL_tree_remove_inhibits(struct _IDL_tree_node **p);
-extern void			IDL_tree_remove_empty_modules(struct _IDL_tree_node **p);
+extern void			IDL_tree_process_forward_dcls(struct _IDL_tree_node **p, struct _IDL_ns *);
+extern void			IDL_tree_remove_inhibits(struct _IDL_tree_node **p, struct _IDL_ns *);
+extern void			IDL_tree_remove_empty_modules(struct _IDL_tree_node **p, struct _IDL_ns *);
 
 #ifndef HAVE_CPP_PIPE_STDIN
 extern char *			__IDL_tmp_filename;
